# langgraph_modular_rag_v1

./: .env.local  .gitignore  pyproject.toml  환경셋팅.md
1.langchain_basic/: 01_openai_test.ipynb  02_chat_model.ipynb  03_prompt_message.ipynb  04_output_parser.ipynb  05_runnable.ipynb  06_tool.ipynb  07_agent.ipynb  08_prompt_engineering.ipynb
2.naive_rag/: 01_rag_concept.ipynb  02_document_loader.ipynb  03_text_splitter.ipynb  04_embedding.ipynb  05_vector_store.ipynb  06_retriever.ipynb  07_rag_pipeline.ipynb  langsmith_test.py
3.advanced_rag_ai_trend/: 01_naive_rag_limits.ipynb  02-1_pdf_and_md_compare.ipynb  02_data_pdf_to_md.ipynb  03_query_rewriting_ai_trend.ipynb  04_multi_query_ai_trend.ipynb  05_reranking_ai_trend.ipynb  06_contextual_compression_ai_trend.ipynb  07_source_answer_ai_trend.ipynb  08_rag_evaluation_ai_trend.ipynb  markdown_pre_processing.py  pdf_to_md_docling.py  pdf_to_md_pymupdf4llm.py
6.modular_rag_manual/: README.md  (+3 more)
6.modular_rag_manual/notebooks/: 1-1_pdf_load_and_preview.ipynb  1-2_chunking_manual.ipynb  1-2_page_md_rag_indexing_preprocess.ipynb  1-3_qdrant_naive_rag.ipynb  2-1_advanced_chunking.ipynb  2-2_vector_embedding_store_qdrant_md.ipynb  2-4_advanced_chunking.ipynb  2-5_vector_embedding_store_qdrant.ipynb  3-1_query_rewriting_multi_query.ipynb  3-2_reranking_context_compression.ipynb  4-1_langgraph_state_node_edge.ipynb  4-2_langgraph_basic_rag.ipynb  5-1_modular_rag_sequence.ipynb  5-2_self_corrective_modular_rag.ipynb  6-1_refactoring_to_modules.ipynb  6-2_final_modular_rag_demo.ipynb  README.md  pyproject.toml  text_cleaner.py  수업흐름.md
(+67 files in other folders)
