[project]
name = "langgraph-modular-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.95.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.3",
    "flashrank>=0.2.10",
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "notebook>=7.5.6",
    "onnxruntime>=1.26.0",
    "protobuf>=3.20.0,<3.21.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.47.0",
]
