[project]
name = "langgraph-modular-rag"
version = "0.1.0"
description = "LangGraph 기반 Modular RAG 실습 프로젝트"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.0",
    "qdrant-client>=1.10.0",
    "python-dotenv>=1.0.1",
    "pypdf>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "tiktoken>=0.7.0"
]

[tool.uv]
package = false
